k3s/kuboard-create-token.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kuboard
