k3s/minio-k3s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      nodeSelector:
        kubernetes.io/hostname: sg-do-k8s-master-01
      containers:
      - name: minio
        image: minio/minio:latest
        args:
        - server
        - /data
        - --console-address
        - ":9001"
        ports:
        - containerPort: 9000
          name: s3
        - containerPort: 9001
          name: console
        # ! fixme: 硬编码密码存在安全风险，应迁移至 K8s Secret
        volumeMounts:
        - name: minio-data
          mountPath: /data
      volumes:
      - name: minio-data
        hostPath:
          path: /opt/minio/data
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: minio-s3
  namespace: default
spec:
  type: NodePort
  selector:
    app: minio
  ports:
  - port: 9000
    targetPort: 9000
    nodePort: 30900
    name: s3
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  namespace: default
spec:
  selector:
    app: minio
  ports:
  - port: 9001
    targetPort: 9001
    name: console
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: minio.pineapple-user.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-console
            port:
              number: 9001
